@@ -7,6 +7,7 @@ version 2.1.3.10
 - when you alt-tab back into the script editor, the keyboard focus goes to the text box as expected
 - when you Save As, the filename is filled in already with the current one
 - renamed UDMF/Hexen activation stuff relating to projectiles because it's more correct and less confusing
+- fixed crash when creating a new level with no resources selected and randomized textures
 - hide matching texture sets with 0 textures in the texture browser
 - additional logging for shader loading crashes
 
